--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shine smile</title>
+    <title>Shine Smile</title>
 
     <!-- Embed Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -98,6 +98,20 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <h1>heading</h1>
+    <header class="header">
+      <div class="container">
+        <div class="header-top">
+          <a href="/">
+            <div class="logo">
+              <span class="logo__circle"></span>
+              <span class="logo__text">
+                <span class="logo__brand">shine</span>
+                <span class="logo__brand logo__brand--small">smile</span>
+              </span>
+            </div>
+          </a>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
