--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
     <!-- Styles css -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body>
-    <header class="header">
+  <body style="height: 20000px">
+    <header class="header fixed">
       <div class="container">
         <div class="header-top">
+          <!-- Logo -->
           <a href="/">
             <div class="logo">
               <span class="logo__circle"></span>
@@ -110,6 +111,30 @@
               </span>
             </div>
           </a>
+
+          <!-- Nav -->
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#!" class="nav__link nav__link--active">Home</a>
+              </li>
+              <li class="nav__item">
+                <a href="#!" class="nav__link">Services</a>
+              </li>
+              <li class="nav__item">
+                <a href="#!" class="nav__link">About</a>
+              </li>
+              <li class="nav__item">
+                <a href="#!" class="nav__link">Doctors</a>
+              </li>
+            </ul>
+          </nav>
+
+          <!-- Action -->
+          <div class="action">
+            <a href="#!" class="action__login">Log In</a>
+            <button href="#!" class="btn action__signup">Sign Up</b>
+          </div>
         </div>
       </div>
     </header>
