--- a/index.html
+++ b/index.html
@@ -333,6 +333,40 @@
           </div>
         </div>
       </section>
+
+      <!-- feature -->
+      <section class="feature">
+        <div class="container">
+          <div class="feature__inner">
+            <div class="feature__media">
+              <figure class="feature__images">
+                <img
+                  src="./assets/img/feature-01.jpg"
+                  alt="Take back your smile with shine."
+                  class="feature__img"
+                />
+                <img
+                  src="./assets/img/feature-02.jpg"
+                  alt="Take back your smile with shine."
+                  class="feature__img"
+                />
+              </figure>
+            </div>
+
+            <section class="feature__content">
+              <h2 class="feature__heading section-heading">
+                Take back your smile with shine.
+              </h2>
+              <p class="feature__desc section-desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+
+              <a href="#!" class="btn feature__cta">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer -->
