--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shine Smile</title>
 
-    <!-- Embed Fonts -->
+    <!-- Embed fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -104,7 +104,7 @@
         <!-- Header top -->
         <div class="header-top">
           <!-- Logo -->
-          <a href="/">
+          <a href="#">
             <div class="logo">
               <span class="logo__circle"></span>
               <span class="logo__text">
@@ -118,7 +118,7 @@
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#!" class="nav__link nav__link--active">Home</a>
+                <a href="#" class="nav__link nav__link--active">Home</a>
               </li>
               <li class="nav__item">
                 <a href="#!" class="nav__link">Services</a>
@@ -657,7 +657,7 @@
         <div class="footer__row">
           <div class="footer__column">
             <!-- Logo -->
-            <a href="/">
+            <a href="#">
               <div class="logo">
                 <span class="logo__circle"></span>
                 <span class="logo__text">
